// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order Tile component Renders correctly 1`] = `
<div>
  <div
    class="flex pt-8 w-full"
    data-testid="wrapper"
  >
    <div
      class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
    >
      <div
        class="flex justify-center items-center rounded-full bg-coreUI-background-images w-32 h-32"
      >
        <img
          alt="Cycle Blend"
          class="w-28 max-h-28"
          src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/specialty-coffee-espresso-cycle-blend-cycle-roasters-lubeck_20copy.webp?v=1655307920"
        />
      </div>
    </div>
    <div
      class="pl-4 flex flex-col justify-center"
    >
      <div
        class="text-base leading-6 font-semibold"
      >
        Cycle Blend
      </div>
      <div
        class="text-coreUI-text-secondary text-base leading-6"
      >
        250g / Ganze Bohne
      </div>
      <div
        class="flex items-baseline"
      >
        <span
          class="mr-1 text-base leading-6 font-semibold"
        >
          7,20 €
        </span>
        <span
          class="text-coreUI-text-secondary text-xs leading-4"
        >
          (
          28,80 €
          /kg)
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order Tile component Renders correctly for multi item 1`] = `
<div>
  <div
    class="flex pt-8 w-full"
    data-testid="wrapper"
  >
    <div
      class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
    >
      <div
        class="flex justify-center items-center rounded-full bg-coreUI-background-images w-32 h-32"
      >
        <img
          alt="Cycle Blend"
          class="w-28 max-h-28"
          src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/specialty-coffee-espresso-cycle-blend-cycle-roasters-lubeck_20copy.webp?v=1655307920"
        />
      </div>
    </div>
    <div
      class="pl-4 flex flex-col justify-center"
    >
      <div
        class="text-base leading-6 font-semibold"
      >
        2 x Cycle Blend
      </div>
      <div
        class="text-coreUI-text-secondary text-base leading-6"
      >
        250g / Ganze Bohne
      </div>
      <div
        class="flex items-baseline"
      >
        <span
          class="mr-1 text-base leading-6 font-semibold"
        >
          7,20 €
        </span>
        <span
          class="text-coreUI-text-secondary text-xs leading-4"
        >
          (
          28,80 €
          /kg)
        </span>
      </div>
    </div>
  </div>
</div>
`;
